# nlp-negative-sampling

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.circleci/: config.yml
data/test_worker/: text.txt
data/test_worker/test_results/: pairs.csv  results.csv
data/test_worker/trained_model/: embed_matrix  words_voc
nlp_negative_sampling/: __init__.py  summation.py
nlp_negative_sampling/libs/: gradient.py  pos_and_neg_pairs.py  similarity.py
nlp_negative_sampling/models/: __init__.py  skip_gram.py
nlp_negative_sampling/processes/workers/: __init__.py  compute_embedding_and_similarity.py  compute_words_similarity.py
nlp_negative_sampling/utils/: __init__.py  func_tools.py  input_handler.py  parser.py  process_text_data.py
notebook/: skip_gram.ipynb
tests/: __init__.py  conftest.py  test_summation.py
tests/libs/: __init__.py  test_gradient.py  test_pos_and_neg_pairs.py  test_similarity.py
tests/processes/workers/: test_compute_embedding_and_similarity.py
tests/utils/: __init__.py  test_func_tools.py  test_input_handler.py  test_parser.py  test_process_text_data.py
