[tool.poetry]
name = "nlp-negetive-sampling"
version = "0.1.0"
description = "Skip-gram Model with Negative-Sampling from Scratch"
authors = ["Driss Debbagh-Nour <dndriss@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
numpy = "1.18.5"
pandas = "1.0.4"
argparse = "1.4.0"

[tool.poetry.dev-dependencies]
black = "19.10.b0"
isort = "4.3.21"
flake8 = "3.8.2"
pytest = "5.4.2"
pytest-cov = "2.9.0"
pytest-mock = "3.1.0"
mypy = "0.770"
flake8-docstrings = "1.5.0"
flake8-bugbear = "20.1.4"
pep8-naming = "0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
